@@ -25,7 +25,6 @@ import org.elasticsearch.xpack.security.authc.ldap.support.LdapSession.GroupsRes
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.xpack.core.security.authc.ldap.support.SessionFactorySettings.IGNORE_REFERRAL_ERRORS_SETTING;
 import static org.elasticsearch.xpack.security.authc.ldap.ActiveDirectorySIDUtil.TOKEN_GROUPS;
@@ -108,7 +107,7 @@ class ActiveDirectoryGroupsResolver implements GroupsResolver {
                     final byte[][] tokenGroupSIDBytes = entry.getAttributeValueByteArrays(TOKEN_GROUPS);
                     List<Filter> orFilters = Arrays.stream(tokenGroupSIDBytes)
                         .map((sidBytes) -> Filter.createEqualityFilter("objectSid", convertToString(sidBytes)))
-                        .collect(Collectors.toList());
+                        .toList();
                     listener.onResponse(Filter.createORFilter(orFilters));
                 }
             }, listener::onFailure),
